--- a/VedantPayUI/css/custom/custom.css
+++ b/VedantPayUI/css/custom/custom.css
@@ -69,3 +69,12 @@
    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
    font-weight: 300;
 }
+
+.carousel-inner {
+    height:550px;
+}
+
+ .carousel-item img{
+ width: inherit;
+    height: -webkit-fill-available;
+}
