contacts updated by Abhishek
icons and widths are adjusted

--- a/css/custom/contact.css
+++ b/css/custom/contact.css
@@ -39,36 +39,28 @@ body{
   padding-left: 20px;
 }
 
-.pad-icon a {
-  text-decoration: none;
-  margin-right: 40px;
-}
 
 .contact-input-group:focus {
   border: 1px solid #ffb037;
 }
 
-.pad-icon a:active {
-  height: 30px;
-  width: 30px;
-  background-color: #0080ff;
-  border-radius: 100%;
-}
+
 
 .links {
-  padding-top: 50px;
-  width: 50%;
+  padding-top: 40px;
+}
+.contact{
+  display: block;
+  text-align: ;
+}
+.pad {
+  padding-top: 20px;
 }
 
 #bordering a:active {
   border: 1px solid #0080ff;
 }
 
-
-  .pad {
-    padding-top: 20px;
-  }
-}
 .contacts-icon {
   margin-right: 10px;
 }
