--- a/css/custom/services.css
+++ b/css/custom/services.css
@@ -10,5 +10,20 @@
 	font-size: 20px; 
 }
 
+.card-hover-effect:hover{
+	position: relative;
+  	display: flex;
+  	flex-direction: column;
+  	min-width: 0;
+  	word-wrap: break-word;
+  	background-color: #fff;
+  	background-clip: border-box;
+  	border: 1px solid rgba(0, 0, 0, 0.125);
+  	border-radius: 0.25rem;
+	/* border: 1px solid black; */
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
 
 
