--- a/css/custom/services.css
+++ b/css/custom/services.css
@@ -24,6 +24,25 @@
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.heading-line::before{
+	content: '';
+  	margin: 0 0 10px 15px;
+    width: 60px;
+    height: 2px;
+    background: #f78b1f;
+    display: inline-block;
+
+}
+.heading-line::after{
+	content: '';
+  	margin: 0 0 10px 15px;
+    width: 60px;
+    height: 2px;
+    background: #f78b1f;
+    display: inline-block;
+
+}
+
 
 
 
