--- a/css/custom/custom.css
+++ b/css/custom/custom.css
@@ -75,6 +75,19 @@ body{
   padding: .3rem 1rem .3rem 1rem !important;
 }
 
+.section-title{
+  
+  color: #fff;
+  text-shadow: none;
+  text-align: center;
+  margin-top: 3rem;
+  padding: 5px 0 5px 0;
+  font-weight: 800;
+}
+
+
+
+
 .navbar{
    background:  rgba(0,0,0,.2);
    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
