Title Changed in Home Page

--- a/css/custom/custom.css
+++ b/css/custom/custom.css
@@ -85,6 +85,14 @@ body{
   font-weight: 800;
 }
 
+.whytitle{
+  color: #fff;
+  text-shadow: none;
+  text-align: center;
+  margin-top: 0.8rem;
+  padding: 5px 0 5px 0;
+  font-weight: 800;
+}
 
 
 
