Navbar color text

--- a/css/custom/homepageform.css
+++ b/css/custom/homepageform.css
@@ -9,6 +9,7 @@
 }
 
 .formbg{
+  background-color: #fafafa;
   background-image: url(../../images/background/animatedfouricons.svg);
   background-repeat: no-repeat;
   background-size: 106% 50%;
