--- a/css/custom/custom.css
+++ b/css/custom/custom.css
@@ -42,6 +42,12 @@ body{
     background-color: #fff;
 }
 
+
+.navbar-light .navbar-nav .nav-link {
+  color: #858da8;
+  font-weight: 600;
+}
+
 .logosize{
     height: 56px;
     width: auto;
@@ -243,7 +249,7 @@ a:hover {
 /* Media Query for Tablets Ipads portrait mode */
 @media (min-width: 768px) and (max-width: 1024px){
     body {
-        background-color: blue;
+        /* background-color: blue; */
     }
     .footrcontent{
       padding: 0 4rem 0 4rem;
@@ -254,7 +260,7 @@ a:hover {
 /* Media Query for Laptops and Desktops */
 @media (min-width: 1025px) and (max-width: 1280px){
     body {
-        background-color: green;
+        /* background-color: green; */
     }
     .footrcontent{
       padding: 0 4rem 0 4rem;
