--- a/css/custom/homepageform.css
+++ b/css/custom/homepageform.css
@@ -1,12 +1,14 @@
 /* Home page get a quote form starts here */
 
-.col-md-4 {
+
+
+.whybox{
   background-image: linear-gradient(315deg, #ea9c4e 0%, #e3801c 74%);
   text-align: center;
-  border-radius: 12px;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0
 }
+
 
 .formbg{
   background-color: #fafafa;
@@ -16,6 +18,18 @@
   background-attachment: scroll;
   background-position: bottom;
 }
+
+.margintop10{
+
+  margin-top: 10px;
+}
+
+.margintop15{
+
+  margin-top: 15px;
+}
+
+
 
 .sideimg {
   text-align: left !important;
