update benifits of registration by abhishek

--- a/css/custom/imagehover.css
+++ b/css/custom/imagehover.css
@@ -9,11 +9,10 @@ section{
     position: relative;
    height: 200px;
     display: flex;
-    background:#000;
 }
 section .screen{
     position: relative;
-    flex-grow:2;
+    flex-grow:4;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -29,40 +28,40 @@ section .screen:hover{
     opacity: 1;
 }
 section .screen:nth-child(1){
-    background:url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPedt9l3EtFXbb6uh04Dp4wSlH5CewG_Zo8TaB126aPNtmyras1oFTvc3fLfcMDFs9J5o&usqp=CAU);
+    background:url(https://picsum.photos/200/200);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     
 }
 section .screen:nth-child(2){
-    background:url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPedt9l3EtFXbb6uh04Dp4wSlH5CewG_Zo8TaB126aPNtmyras1oFTvc3fLfcMDFs9J5o&usqp=CAU);
+    background:url(https://picsum.photos/300/300);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 section .screen:nth-child(3){
-    background:url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPedt9l3EtFXbb6uh04Dp4wSlH5CewG_Zo8TaB126aPNtmyras1oFTvc3fLfcMDFs9J5o&usqp=CAU);
+    background:url(https://picsum.photos/250/250);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 section .screen:nth-child(4){
-    background:url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPedt9l3EtFXbb6uh04Dp4wSlH5CewG_Zo8TaB126aPNtmyras1oFTvc3fLfcMDFs9J5o&usqp=CAU);
+    background:url(https://picsum.photos/275);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     
 }
 section .screen:nth-child(5){
-    background:url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPedt9l3EtFXbb6uh04Dp4wSlH5CewG_Zo8TaB126aPNtmyras1oFTvc3fLfcMDFs9J5o&usqp=CAU);
+    background:url(https://picsum.photos/100);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     
 }
 section .screen:nth-child(6){
-    background:url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPedt9l3EtFXbb6uh04Dp4wSlH5CewG_Zo8TaB126aPNtmyras1oFTvc3fLfcMDFs9J5o&usqp=CAU);
+    background:url(https://picsum.photos/100);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -89,5 +88,5 @@ section .screen .content h2{
     padding:0;
     text-transform: uppercase;
     font-size: 20px;
-    color:#ed363a;
+
 }
