--- a/css/custom/imagehover.css
+++ b/css/custom/imagehover.css
@@ -96,9 +96,7 @@ section .screen .content h2{
 
 
 @keyframes glowing {
-    0% { background-color: #f78b1f; -webkit-box-shadow: 0 0 1px #f17d09; }
-    25% { background-color: #af8051; -webkit-box-shadow: 0 0 4px #b9742f; }
-    50% { background-color: #ff8000; -webkit-box-shadow: 0 0 4px #ad6620; }
-    75% { background-color: #91571e; -webkit-box-shadow: 0 0 4px #f17b04c2; }
+    0% { background-color: #ff8c19; -webkit-box-shadow: 0 0 1px #f17d09; }
+    50% { background-color: #ff8000; -webkit-box-shadow: 0 0 5px #ad6620; }
     100% { background-color: #f78b1fa6; -webkit-box-shadow: 0 0 2px #ff8000; }
   }
