--- a/css/custom/custom.css
+++ b/css/custom/custom.css
@@ -224,7 +224,9 @@ a:hover {
   padding-top: 4px;
 }
 
-
+.navbg {
+  background-color: #f78b1f!important;
+}
 
 /* ***********************************Media Query for all pages Begin******************************************** */
  /* Media Query for Mobile Devices */
