--- a/css/custom/custom.css
+++ b/css/custom/custom.css
@@ -1250,3 +1250,18 @@ background-size:100%;
 
 }
 /* background animation floating elements */
+
+/* Gallery */
+#ofcDiv div img{
+
+
+  width: 100%;
+}
+
+.ofcDiv{
+  padding:0 15% 0 15%;
+}
+
+.ofcDivMgTop{
+  margin-top: 25px !important;
+}
